[gd_scene load_steps=4 format=2]

[ext_resource path="res://scripts/thumbnail_list.gd" type="Script" id=1]
[ext_resource path="res://scripts/page_buttons.gd" type="Script" id=2]
[ext_resource path="res://scripts/thumbnails.gd" type="Script" id=3]

[node name="thumbnail_list" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_clip_content = true
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 1 )

[node name="panel" type="PanelContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="margin" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_left = 5
custom_constants/margin_bottom = 5

[node name="vbox" type="VBoxContainer" parent="margin"]
margin_left = 5.0
margin_top = 5.0
margin_right = 1915.0
margin_bottom = 1075.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="sort_buttons" type="HFlowContainer" parent="margin/vbox"]
margin_right = 1910.0
margin_bottom = 20.0
mouse_filter = 2
size_flags_horizontal = 3

[node name="sort_label" type="Label" parent="margin/vbox/sort_buttons"]
margin_top = 3.0
margin_right = 53.0
margin_bottom = 17.0
text = "Sort By: "

[node name="sort_by" type="OptionButton" parent="margin/vbox/sort_buttons"]
margin_left = 57.0
margin_right = 145.0
margin_bottom = 20.0
text = "File Hash"
items = [ "File Hash", null, false, 0, null, "File Path", null, false, 1, null, "File Size", null, false, 2, null, "File Creation Time", null, false, 3, null, "Tag Count", null, false, 4, null ]
selected = 0

[node name="order_by" type="OptionButton" parent="margin/vbox/sort_buttons"]
margin_left = 149.0
margin_right = 244.0
margin_bottom = 20.0
text = "Ascending"
items = [ "Ascending", null, false, 0, null, "Descending", null, false, 1, null ]
selected = 0

[node name="space" type="Control" parent="margin/vbox/sort_buttons"]
margin_left = 248.0
margin_right = 1818.0
margin_bottom = 20.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="select_all" type="Button" parent="margin/vbox/sort_buttons"]
margin_left = 1822.0
margin_right = 1910.0
margin_bottom = 20.0
text = "  Select All  "

[node name="hsep3" type="HSeparator" parent="margin/vbox"]
margin_top = 24.0
margin_right = 1910.0
margin_bottom = 28.0
mouse_filter = 2
size_flags_horizontal = 3

[node name="thumbnails" type="ItemList" parent="margin/vbox"]
margin_top = 32.0
margin_right = 1910.0
margin_bottom = 1034.0
size_flags_horizontal = 3
size_flags_vertical = 3
select_mode = 1
allow_rmb_select = true
max_columns = 200
same_column_width = true
fixed_column_width = 240
icon_mode = 0
fixed_icon_size = Vector2( 240, 240 )
script = ExtResource( 3 )

[node name="Timer" type="Timer" parent="margin/vbox/thumbnails"]

[node name="hsep4" type="HSeparator" parent="margin/vbox"]
margin_top = 1038.0
margin_right = 1910.0
margin_bottom = 1042.0
mouse_filter = 2
size_flags_horizontal = 3

[node name="page_buttons" type="HFlowContainer" parent="margin/vbox"]
margin_top = 1046.0
margin_right = 1910.0
margin_bottom = 1070.0
mouse_filter = 2
size_flags_horizontal = 3
script = ExtResource( 2 )

[node name="prev_page" type="Button" parent="margin/vbox/page_buttons"]
margin_right = 56.0
margin_bottom = 24.0
text = "  Prev  "

[node name="first_page" type="Button" parent="margin/vbox/page_buttons"]
margin_left = 60.0
margin_right = 116.0
margin_bottom = 24.0
text = "  First  "

[node name="space1" type="Control" parent="margin/vbox/page_buttons"]
visible = false
margin_left = 60.0
margin_right = 641.0
margin_bottom = 44.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="hbox" type="HBoxContainer" parent="margin/vbox/page_buttons"]
margin_left = 120.0
margin_right = 1790.0
margin_bottom = 24.0
grow_horizontal = 2
mouse_filter = 2
size_flags_horizontal = 3
custom_constants/separation = 0
alignment = 1

[node name="page_1" type="Button" parent="margin/vbox/page_buttons/hbox"]
visible = false
margin_left = 757.0
margin_right = 793.0
margin_bottom = 20.0
text = "  1  "

[node name="page_2" type="Button" parent="margin/vbox/page_buttons/hbox"]
visible = false
margin_left = 817.0
margin_right = 853.0
margin_bottom = 20.0
text = "  2  "

[node name="page_3" type="Button" parent="margin/vbox/page_buttons/hbox"]
visible = false
margin_left = 837.0
margin_right = 873.0
margin_bottom = 20.0
text = "  3  "

[node name="page_4" type="Button" parent="margin/vbox/page_buttons/hbox"]
visible = false
margin_left = 857.0
margin_right = 893.0
margin_bottom = 20.0
text = "  4  "

[node name="current_page" type="SpinBox" parent="margin/vbox/page_buttons/hbox"]
margin_left = 783.0
margin_right = 857.0
margin_bottom = 24.0
grow_horizontal = 0
min_value = 1.0
max_value = 82.0
value = 1.0
rounded = true
align = 1

[node name="total_pages" type="Label" parent="margin/vbox/page_buttons/hbox"]
margin_left = 857.0
margin_top = 5.0
margin_right = 886.0
margin_bottom = 19.0
text = " / 82"

[node name="vbox" type="VBoxContainer" parent="margin/vbox/page_buttons"]
visible = false
margin_left = 1848.0
margin_right = 1848.0
margin_bottom = 20.0
mouse_filter = 2

[node name="page_label" type="Label" parent="margin/vbox/page_buttons/vbox"]
visible = false
margin_bottom = 14.0
align = 1

[node name="space2" type="Control" parent="margin/vbox/page_buttons"]
visible = false
margin_left = 974.0
margin_right = 1848.0
margin_bottom = 44.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="last_page" type="Button" parent="margin/vbox/page_buttons"]
margin_left = 1794.0
margin_right = 1848.0
margin_bottom = 24.0
text = "  Last  "

[node name="next_page" type="Button" parent="margin/vbox/page_buttons"]
margin_left = 1852.0
margin_right = 1910.0
margin_bottom = 24.0
text = "  Next  "

[connection signal="pressed" from="margin/vbox/page_buttons/prev_page" to="margin/vbox/page_buttons" method="_on_prev_page_pressed"]
[connection signal="pressed" from="margin/vbox/page_buttons/first_page" to="margin/vbox/page_buttons" method="_on_first_page_pressed"]
[connection signal="value_changed" from="margin/vbox/page_buttons/hbox/current_page" to="margin/vbox/page_buttons" method="_on_current_page_value_changed"]
[connection signal="pressed" from="margin/vbox/page_buttons/last_page" to="margin/vbox/page_buttons" method="_on_last_page_pressed"]
[connection signal="pressed" from="margin/vbox/page_buttons/next_page" to="margin/vbox/page_buttons" method="_on_next_page_pressed"]
